--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: url('https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg');">
+
+
+
+</div>
