back almost done

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,27 +1,64 @@
+<h2><%= @category.title %></h2>
+<%= simple_form_for @category do |f| %>
+  <%= f.simple_fields_for :albums, @album do |u| %>
+    <%= u.input :title %>
+  <% end %>
+  <%= f.submit 'Ajouter un nouvelle album' %>
+<% end %>
+
 
 <% @category.albums.each do |album| %>
 
   <%= album.title %>
-  <br>
-  <%= link_to 'Ajouter une photo', new_category_picture_path(@category, query: album.id ) %>
-  <br>
-  <% album.pictures.each do |picture| %>
-    <!-- <#%= cl_image_path picture.photo.url %> <br> -->
-    <%=  link_to edit_picture_path(picture) do %>
-      <%= cl_image_tag picture.photo, height: 300, width: 400, crop: :fill %> <br>
+  <div class="row">
+    <div class="col-lg-3 col-xs-12 col-sm-4">
+    <%= link_to 'Ajouter une photo', new_category_picture_path(@category, query: album.id ) %>
+    </div>
+    <% album.pictures.each do |picture| %>
+      <div class="col-lg-3 col-xs-12 col-sm-4">
+        <div class="card" style="background-image: url('<%= cl_image_path picture.photo %>' )">
+          <div class="card-description">
+            <p><%= picture.title %></p>
+          </div>
+          <%= link_to '#', edit_picture_path(picture), class:"card-link" %>
+        </div>
+      </div>
     <% end %>
-  <% end %>
+  </div>
 <% end %>
 
 
-
-<h2>Ajouter un album</h2>
-
-<%= simple_form_for @category do |f| %>
-  <%= f.object.title %>
-  <%= f.simple_fields_for :albums, @album do |u| %>
-    <%= u.input :title %>
-  <% end %>
-  <%= f.submit %>
-<% end %>
-
+<style>
+  .card{
+    height: 175px;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+    background-size: contain !important;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: white;
+    position: relative;
+  }
+  .card-description {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+  }
+  .card-description p {
+  font-size: 14px;
+  opacity: 0.7;
+  font-weight: lighter;
+}
+  .card-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  z-index: 2;
+  background: black;
+  opacity: 0;
+}
+.card-link:hover {
+  opacity: 0.1;
+}
+</style>
