--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,11 @@
 // Specific CSS for your home-page
+
+body {
+  background-color: white;
+}
+
+
+.container-all-dimension {
+  padding: 0 12%;
+  padding-top: 15vh;
+}
