--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "presentation";
+@import "picture";
+@import "category";
+@import "new";
