--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -1,16 +1,22 @@
 .intro-category {
-  background-color: $pink;
+  // background-color: $pink;
   padding: 5%;
   bottom: 0;
-  max-width: 90%;
-
+  width: 70%;
+  margin: auto;
 }
 .title-intro {
-  margin-bottom: 20px;
-  h2, h3 {
+  margin-bottom: 5vh;
+  h3, h4 {
     text-align: center;
-    margin: 0;
   }
 }
 
 
+@media only screen and (max-width:800px) {
+  .intro-category {
+  background-color: $pink;
+  width: 100%;
+  padding: 5%;
+  }
+}
