--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,20 +1,19 @@
 <div class="container-all-dimension">
-    <% @album.pictures.each do |picture| %>
-      <div class="card"style="transform: rotate(<%=picture.rotation %>deg); background-image: url('<%= cl_image_path picture.photo %>' );
+    <% @pictures.each do |picture| %>
+    <% if @album.subtitle.present? && @pictures.first == picture %>
+      <div class="first-title-album">
+        <p><%= @album.subtitle %></p>
+      </div>
+    <% end %>
+    <div class="picture-show">
+      <div class="div-picture-background "style="transform: rotate(<%=picture.rotation %>deg); background-image: url('<%= cl_image_path picture.photo %>' );
        <%= picture.rotation_vertical? ? "width: #{picture.hauteur}px;" : ""%>;height: <%=picture.hauteur%>px; background-position:<%= picture.align_with_the_rotation %>">
       </div>
-      <%= picture.title %>
-      <%= picture.rotation %>
-      <%= picture.rotation_vertical? %>
-      <%= picture.hauteur %>,
-      id: <%= picture.id %>
+      <div class="title-picture">
+        <p style="font-size: 12px"> <%= picture.title %></p>
+      </div>
+    </div>
     <% end %>
 
 </div>
 
-<style>
-  .card{
-    background-size: contain !important;
-    background-repeat: no-repeat;
-  }
-</style>
