--- a/app/views/shared/_dropdown-burger.html.erb
+++ b/app/views/shared/_dropdown-burger.html.erb
@@ -6,7 +6,9 @@
         <!-- <li><#%= link_to category.title, category_path(category) %> </li> -->
         <li><%= link_to category.title, categories_path(title: category.title_no_space) %> </li>
         <% category.albums.each do |album| %>
-          <li><%= link_to album.title, album_path(title: album.title_no_space) %> </li>
+          <% if album.has_pictures? %>
+            <li><%= link_to album.title, album_path(title: album.title_no_space) %> </li>
+          <% end %>
         <% end %>
       <% end %>
     </ul>
