--- a/app/views/shared/_dropdown-burger.html.erb
+++ b/app/views/shared/_dropdown-burger.html.erb
@@ -1,16 +1,19 @@
 <div class="navbar-wagon-item">
-  <div class="dropdown">
+  <div class="dropdown" id="burger-menu-clicked">
     <%= render 'shared/burger_icon' %>
     <ul class="dropdown-menu-burger dropdown-menu-right">
-      <% @categories.each do |category| %>
+      <% @categories.order('created_at ASC').each do |category| %>
         <!-- <li><#%= link_to category.title, category_path(category) %> </li> -->
-        <li><%= link_to category.title, categories_path(title: category.title_no_space) %> </li>
+        <li><%= link_to category.title, categories_path(title: category.title_no_space), class:"#{'active-tab' if params[:title] ==  category.title_no_space}" %> </li>
         <% category.albums.each do |album| %>
           <% if album.has_pictures? %>
-            <li><%= link_to album.title, album_path(title: album.title_no_space) %> </li>
+            <li><%= link_to album.title, album_path(title: album.title_no_space), class:"#{'active-tab' if params[:title] ==  album.title_no_space}" %> </li>
           <% end %>
         <% end %>
       <% end %>
     </ul>
   </div>
 </div>
+
+
+
