--- a/app/views/shared/_modal-add-album.html.erb
+++ b/app/views/shared/_modal-add-album.html.erb
@@ -10,7 +10,7 @@
           <%= u.input :subtitle, as: :text, input_html: { rows: 3}, label: "Description :" %>
         <% end %>
         <div style="margin: auto; width: 34%;">
-          <%= f.submit "Ajouter l'album" %>
+          <%= f.submit "Ajouter l'album", class:"btn-action no-margin" %>
         </div>
       <% end %>
       </div>
