--- a/app/assets/stylesheets/pages/_category.scss
+++ b/app/assets/stylesheets/pages/_category.scss
@@ -23,7 +23,7 @@
 
 .card-link {
   position: absolute;
-  top: 6px;
+  top: 0px;
   bottom: 0;
   right: 15px;
   left: 15px;
@@ -51,3 +51,7 @@
     border-bottom: 2px solid black;
   }
 }
+.no-margin {
+  margin: 0;
+}
+
