--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,8 +7,8 @@ body {
 
 .container-all-dimension {
   padding: 0 12%;
-  padding-top: 18vh !important;
-  padding-bottom: 5vh;
+  margin-top: 18vh !important;
+  // padding-bottom: 5vh;
 }
 
 
