--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,6 +17,10 @@
   height: 15vh;
 }
 
+// TODO passer a 11vh et mettre plus de blanc en dessous du logo
+
+
+
 // white color text
 #navbar_home {
   #logo_image {
