--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 
 <div class="banner" style="background-image: url('https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg');">
 
-<%= link_to t(".sign_in", default: "Login"), new_user_session_path, style:"color: white;" %>
+<!-- <#%= link_to t(".sign_in", default: "Login"), new_user_session_path, style:"color: white;" %> -->
 
 </div>
 
 <div id="footer-white">
-  <%= render 'shared/footer' %>
+  <%= render 'shared/footer', category: nil %>
 </div>
