--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,10 @@
     <%= link_to 'https://www.instagram.com/hellolaterre_cr/?hl=fr', target: "_blank" do %>
       <i class="fab fa-instagram"></i>
     <% end %>
-    <%= mail_to "chloe@rollandmail.com", subject: "#{category.title.capitalize}" do %>
+    <% if  %>
+
+    <% end %>
+    <%= mail_to "chloe@rollandmail.com" do %>
       <i class="far fa-envelope"></i>
     <% end %>
     <%= link_to "http://localhost:3000/Vos_commandes", class:"" do %>
