--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,10 +12,10 @@
   padding: 10px;
   a {
     color: black;
-    padding: 10px;
+    padding: 8px;
   }
   a:hover {
-    font-size: 30px;
+    font-size: 25px;
     text-decoration: none;
   }
 }
@@ -23,5 +23,10 @@
 #footer-white {
   a {
     color: white;
+    font-size: 25px;
+  }
+  a:hover {
+    font-size: 30px;
+    text-decoration: none;
   }
 }
