--- a/app/views/categories/presentation.html.erb
+++ b/app/views/categories/presentation.html.erb
@@ -8,14 +8,13 @@
         <p>Je suis partie tout d ’abord découvrir le monde à travers l’Asie, avec deux questions de type existentiel en tête : qui suis-je ? Quelle est ma place sur terre... Je cherchais un nouveau regard sur les choses, un point de vue qui soit le mien. L ’image est alors devenue l ’un de mes principaux supports d ’expression. Avant de partir, ne sachant pas vraiment « quoi » prendre, ni « comment » photographier les choses, je suis allée trouver conseil auprès de Tadashi Ono, professeur de photographie à l ’Atelier de Sèvres, à Paris. À mes questions, il m ’a proposé une direction à suivre : au-delà des différences, regarde les ressemblances entre les cultures. Photographie tout ce que tu peux. Fais-en une collection... De retour en France, j’ai eu la chance de poursuivre cette reflexion auprès du photographe, avant qu’il ne reparte enseigner au Japon.</p><br><p>À l’est du centre est une collection d’images - photographies et dessins - nourrie durant sept années, parfois mise « en attente », afin de laisser mûrir ma pensée, au fil des voyages et de mes rencontres. Ces images ont été réalisées à travers différents états du monde - géographique, physique, émotionnel, mental... chacune étant le reflet d’un état d ’esprit, dans l ’instant. Au cours de ce travail, j ’ai découvert les liens qui étaient entrain de se tisser entre mes photographies, et mes dessins : un dialogue prend forme, mes images se répondent, peu importe l ’endroit, elles sont en relations. Petit à petit, j ’entrevois un au-delà à la source de ce travail... révélant l ’unité dans laquelle chaque image repose, tout en offrant au monde l ’authenticité de ce qu ’elle présente.</p><br><p>Chloé</p>
       </div>
     <% elsif @category.title == "Vos commandes" %>
-      <div class="intro-category">
+      <div class="intro-category" style="width: 60%">
         <div class="title-intro">
           <h3>Vos commandes</h3>
         </div>
         <p>À partir de techniques variées, telles que la photographie, le dessin, la peinture ou l’encadrement*, je suis heureuse de vous proposer une création. Dans le cadre d’un projet professionnel, d’une décoration d’intérieure, d’une communication, d’un évé- nement... Vous pouvez me contacter, toute thématique est la bienvenue .</p> <br>
         <p>Je travaille à mon domicile, dans mon atelier, situé dans le centre ville de Nantes.</p> <br>
         <p>Au plaisir de pouvoir vous rencontrer :)</p>
-        <br>
         <br>
         <br>
         <br>
