--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,8 +7,10 @@ body {
 
 .container-all-dimension {
   padding: 0 12%;
-  margin-top: 18vh !important;
+  margin-top: 15vh !important;
   // padding-bottom: 5vh;
+  overflow: scroll;
+  height: 85vh;
 }
 
 
