--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -22,7 +22,16 @@
 }
 
 
+.pink-background {
+  background-color: $pink;
+}
 
+.display-center {
+  display: flex;
+  align-items: center;
+  height: 85vh;
+
+}
 
 #photo-auteur {
   height: 500px;
