--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TODO</title>
+    <title>Image.</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -11,9 +11,13 @@
   </head>
   <body id="test-body">
     <%= render 'shared/navbar-general' %>
-    <!-- <#%= render 'shared/flashes' %> -->
     <%= yield %>
+    <%= render 'shared/flashes' %>
+    <% if params[:query] == "Visualiser" %>
+      <%= render 'shared/back-btn' %>
+    <% end %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
+
   </body>
 </html>
