--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,21 +6,18 @@
   position: fixed;
   width: 100%;
   padding: 0 5%;
+  padding-bottom: 1%;
   z-index: 10;
   top: 0;
 }
 
-.high-padding-navbar {
-  // padding: 0px 30px;
-}
 .high-height {
-  height: 15vh;
+  height: 12vh;
 }
 
-// TODO passer a 11vh et mettre plus de blanc en dessous du logo
-
-
-
+.message{
+  white-space: pre-line;
+}
 // white color text
 #navbar_home {
   #logo_image {
@@ -96,10 +93,11 @@
 .open > .dropdown-menu-burger {
   display: block;
 }
-
+.margin-by-category {
+  padding: 4px 0px;
+}
 
 .navbar-wagon-dropdown-menu li > a, li {
-  padding: 5px 0px;
   display: block;
   padding-bottom: 1px;
   text-decoration: none;
@@ -182,52 +180,29 @@
 }
 
 /* Dropdown menu */
-.navbar-wagon-dropdown-menu {
-  margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
-}
-// .navbar-wagon-dropdown-menu li > a, li {
-//   transition: color 0.3s ease;
-//   font-weight: lighter !important;
-//   // color: #999999 !important;
-//   font-size: 15px !important;
-//   line-height: 22px !important;
-// }
-// .navbar-wagon-dropdown-menu li > a:hover, li:hover {
-//   background: transparent !important;
-//   color: black !important;
-// }
-// .navbar-wagon-dropdown-menu:before {
-//   content: ' ';
-//   height: 10px;
-//   width: 10px;
-//   position: absolute;
-//   right: 10px;
-//   top: -6px;
-//   transform: rotate(45deg);
-//   border-left: 1px solid #E6E6E6;
-//   border-top: 1px solid #E6E6E6;
+// .navbar-wagon-dropdown-menu {
+//   margin-top: 15px;
+//   box-shadow: 1px 1px 4px #E6E6E6;
+//   border-color: #E6E6E6;
 // }
 
-
-.avatar-square {
-  border-radius: 50%;
-  height: 30px !important;
-  width: 30px !important;
-}
-.avatar-init {
-  background-color: white;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  color: black;
-  font-weight: lighter;
-  border: 1px solid;
-  border-radius: 50%;
-  text-align: center;
-  p {
-    padding: 0;
-    margin: 0;
-  }
-}
+// .avatar-square {
+//   border-radius: 50%;
+//   height: 30px !important;
+//   width: 30px !important;
+// }
+// .avatar-init {
+//   background-color: white;
+//   text-align: center;
+//   display: flex;
+//   justify-content: center;
+//   color: black;
+//   font-weight: lighter;
+//   border: 1px solid;
+//   border-radius: 50%;
+//   text-align: center;
+//   p {
+//     padding: 0;
+//     margin: 0;
+//   }
+// }
