--- a/app/views/categories/presentation.html.erb
+++ b/app/views/categories/presentation.html.erb
@@ -1,45 +1,11 @@
-<div class="container-all-dimension">
-    <% if @category.title == "Collection" %>
-      <div class="intro-category">
-        <div class="title-intro">
-          <h3>À l’ Est du centre.</h3>
-          <h4>2009 - 2016</h4>
-        </div>
-        <p>Je suis partie tout d ’abord découvrir le monde à travers l’Asie, avec deux questions de type existentiel en tête : qui suis-je ? Quelle est ma place sur terre... Je cherchais un nouveau regard sur les choses, un point de vue qui soit le mien. L ’image est alors devenue l ’un de mes principaux supports d ’expression. Avant de partir, ne sachant pas vraiment « quoi » prendre, ni « comment » photographier les choses, je suis allée trouver conseil auprès de Tadashi Ono, professeur de photographie à l ’Atelier de Sèvres, à Paris. À mes questions, il m ’a proposé une direction à suivre : au-delà des différences, regarde les ressemblances entre les cultures. Photographie tout ce que tu peux. Fais-en une collection... De retour en France, j’ai eu la chance de poursuivre cette reflexion auprès du photographe, avant qu’il ne reparte enseigner au Japon.</p><br><p>À l’est du centre est une collection d’images - photographies et dessins - nourrie durant sept années, parfois mise « en attente », afin de laisser mûrir ma pensée, au fil des voyages et de mes rencontres. Ces images ont été réalisées à travers différents états du monde - géographique, physique, émotionnel, mental... chacune étant le reflet d’un état d ’esprit, dans l ’instant. Au cours de ce travail, j ’ai découvert les liens qui étaient entrain de se tisser entre mes photographies, et mes dessins : un dialogue prend forme, mes images se répondent, peu importe l ’endroit, elles sont en relations. Petit à petit, j ’entrevois un au-delà à la source de ce travail... révélant l ’unité dans laquelle chaque image repose, tout en offrant au monde l ’authenticité de ce qu ’elle présente.</p><br><p>Chloé</p>
+<div class="container-all-dimension display-center">
+    <div class="intro-category pink-background" style=" <%= @category.title == "Vos commandes" ? "width: 60%" : ""%> ">
+      <div class="title-intro">
+        <h3><%= @category.title %></h3>
+        <h4><%= @category.subtitle %></h4>
       </div>
-    <% elsif @category.title == "Vos commandes" %>
-      <div class="intro-category" style="width: 60%">
-        <div class="title-intro">
-          <h3>Vos commandes</h3>
-        </div>
-        <p>À partir de techniques variées, telles que la photographie, le dessin, la peinture ou l’encadrement*, je suis heureuse de vous proposer une création. Dans le cadre d’un projet professionnel, d’une décoration d’intérieure, d’une communication, d’un évé- nement... Vous pouvez me contacter, toute thématique est la bienvenue .</p> <br>
-        <p>Je travaille à mon domicile, dans mon atelier, situé dans le centre ville de Nantes.</p> <br>
-        <p>Au plaisir de pouvoir vous rencontrer :)</p>
-        <br>
-        <br>
-        <br>
-        <p>* Formée au sein des Ateliers SD Encadrement par l’artisan Sylvie Dupont, j’y ai appris les bases du métier d’encadreur.se dans les règles de l’art : respect du document, sa conservation et la mise en valeur de l’oeuvre.</p>
-      </div>
-    <% elsif @category.title == "L'auteure"%>
-    <div id="auteur-presentation" style="display: flex;">
-      <div class="div-picture-background">
-        <%= image_tag 'https://res.cloudinary.com/dnks6vpqk/image/upload/v1540526996/auteure.png', id:"photo-auteur" %>
-        <p style="margin-top: 20px !important; font-size: 13px">Dessine-moi un robot. Autoportrait. 2018</p>
-      </div>
-      <div class="texts-auteur" style="margin-left: 30px">
-        <p style="width: 120px;">Je suis née à Nantes (FRANCE), le 15.02.1989 . </p><p>
-          Mes images sont une proposition de l‘indicible. Rendre visible ce qui est
-          tu ; un voyage au quotidien...</p>
-          <br>
-        <p style="margin-left: 20% !important;width: 120px;">Le monde est immense et pourtant.</p> <br>
-
-
-        <p style="margin-left: 40% !important;width: 130px;">Merci à toi qui appa- rait dans mon image. Merci à celles et ceux qui m’accompagnent dans ma quête... Un merci tout particulier à la famille pour votre soutien. Une gratitude infinie pour la vie qui m’est donné de vivre .</p>
-        <p style="margin-left: 40% !important;"> <3 </p>
-      </div>
+      <p class="message"><%= @category.description %></p>
     </div>
-
-    <% end %>
 
 </div>
 
