--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,28 +1,45 @@
-<%= render 'shared/modal-add-album', category: @category, album: @album %>
-<div class="container-all-dimension" style="padding-top: 9vh !important; padding-bottom: 3vh !important;" id="category-show">
+<!-- <#%= render 'shared/modal-add-album', category: @category, album: @album %> -->
+<div class="container-all-dimension" style="padding-top: 2vh !important; padding-bottom: 3vh !important;" id="category-show">
+    <p class="align-text-padding size-text"> <%= @category.visible? ? "Cette categorie est visible, décoches si tu ne veux plus qu'elle soit publique. " : "Coches si tu veux rendre publique cette categorie. " %>
+    <label for="input_<%= @category.id %>" style="padding-left: 10px; cursor: pointer;">
+      <i class="fas fa-check-circle check-icon-visibility <%= @category.visible ? "black-icon" : "gray-icon" %>"></i>
+    </label></p>
+  <%= simple_form_for @category, url: category_path(@category, query: "checking-visibility") do |f| %>
+    <%= f.input :visible, :input_html => { class:"checking-visibility hidden", data: { targetId: "edit_category_#{f.object.id}"}, id:"input_#{f.object.id}"}, label: false %>
+  <% end %>
 
-  <div class="row">
-    <button type="button" class="btn-action" data-toggle="modal" data-target="#newAlbumModal">
+
+  <div style="display: flex; justify-content: space-around;">
+    <%= link_to 'Créer un nouvel album', new_category_album_path(@category), class:"btn-action" %>
+    <!-- <button type="button" class="btn-action" data-toggle="modal" data-target="#newAlbumModal">
       <p>Créer un nouvel album</p>
-    </button>
+    </button> -->
+    <%= link_to 'Modifier cette categorie', edit_category_path(@category) %>
   </div>
 
   <% @category.albums.each do |album| %>
     <hr>
-    <div style="margin: 15px;">
+    <div style="margin: 15px;" id="album_<%= album.id %>">
       <%= album.title %>
-      <%= link_to "- Supprimer", category_album_path(@category, album),
+      <%= link_to " - Modifier ", edit_album_path(album) %>
+      <%= link_to "- Supprimer", album_path(album),
         method: :delete,
         data: { confirm: "Es tu sur?" }, class:"delete-album" %>
     </div>
 
-    <div class="row">
+    <div class="row" data-behavior='sortable' id="pictures" data-url="<%= sort_category_pictures_path(@category) %>">
       <% album.pictures.order('created_at ASC').each do |picture| %>
-        <div class="col-lg-3 col-xs-12 col-sm-4 card">
+        <div class="col-lg-3 col-xs-12 col-sm-4 card" id="<%= dom_id(picture) %>">
           <div class="picture-card" style="background-image: url('<%= cl_image_path picture.photo %>' )">
           </div>
-          <div class="card-description">
-            <p><%= picture.title %></p>
+          <div class="card-description" style="position:relative;">
+            <p style="padding-right: 20px; height: 50px;"><%= truncate(picture.title, :length => 50) %></p>
+            <%= simple_form_for picture, url: picture_path( picture, query: "checking-visibility"), html: {class:"edit-visibility"} do |f| %>
+              <label for="input_<%= f.object.id %>">
+                <i class="fas fa-check-circle check-icon-visibility <%= f.object.visible ? "black-icon" : "gray-icon" %>"></i>
+              </label>
+              <%= f.input :visible, :input_html => { class:"checking-visibility hidden", data: { targetId: "edit_picture_#{f.object.id}"}, id:"input_#{f.object.id}"}, label: false %>
+            <% end %>
           </div>
           <%= link_to '#', edit_picture_path(picture, query: album.id ), class:"card-link" %>
         </div>
