--- a/app/views/shared/_dropdown-burger.html.erb
+++ b/app/views/shared/_dropdown-burger.html.erb
@@ -3,14 +3,24 @@
     <%= render 'shared/burger_icon' %>
     <ul class="dropdown-menu-burger dropdown-menu-right">
       <% @categories.order('created_at ASC').each do |category| %>
-        <!-- <li><#%= link_to category.title, category_path(category) %> </li> -->
-        <li><%= link_to category.title, categories_path(title: category.title_no_space), class:"#{'active-tab' if params[:title] ==  category.title_no_space}" %> </li>
-        <% category.albums.each do |album| %>
-          <% if album.has_pictures? %>
-            <li><%= link_to album.title, album_path(title: album.title_no_space), class:"#{'active-tab' if params[:title] ==  album.title_no_space}" %> </li>
-          <% end %>
+        <% if category.visible %>
+          <div class="margin-by-category">
+            <% if !category.with_description? %>
+              <li><%= link_to category.title, categories_title_path(title: category.title_no_space), class:"#{'active-tab' if params[:title] ==  category.title_no_space}" %> </li>
+            <% end %>
+            <% category.albums.each do |album| %>
+              <% if album.has_pictures? %>
+                <li><%= link_to album.title, album_path(title: album.title_no_space), class:"#{'active-tab' if params[:title] ==  album.title_no_space}" %>
+                <!-- <svg id="Calque_1" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 986.96 19.44"><title>trait_menu</title><path d="M987,1.11c-3.55,1.24-7,3.08-10.68,3.6-21.51,3.07-43,6.4-64.61,8.54-24.84,2.46-49.78,4-74.7,5.49-13.29.78-26.65.77-40,.62q-155.44-1.65-310.89-3.54C422,15,357.84,13.63,293.69,13.06c-23.13-.21-46.28,1.38-69.43,1.82-31.63.6-63.33-.15-94.89,1.61C98.15,18.24,67.11,17,36,15.21c-6.55-.37-13-2.38-19.5-3.62C13.75,11.05,11,10.5,8.21,10A23.63,23.63,0,0,1,0,7.6,11.55,11.55,0,0,1,3.29,6.38a61.5,61.5,0,0,1,10-.07c35.92,4,71.77,1.77,107.66-.69,17.6-1.21,35.28-1.36,52.92-2.07C240.25.84,306.69-.6,373.16.66c48.81.92,97.62,1.66,146.42,2.76Q647.74,6.33,775.9,9.57c17.65.43,35.35,1.88,53,1.17C868.1,9.15,907.47,9.38,946.54,4.3c11.88-1.54,23.79-2.85,35.69-4.22a38.32,38.32,0,0,1,4.42,0C986.75.41,986.86.76,987,1.11Z"/></svg> -->
+                 </li>
+              <% end %>
+            <% end %>
+          </div>
+
         <% end %>
       <% end %>
+      <li><%= link_to "L'auteure", auteure_path %> </li>
+      <li><%= link_to "Mentions Légales", mentionslegales_path %> </li>
     </ul>
   </div>
 </div>
